# GasNova

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  README 2.md  docker-compose.yml  docker-entrypoint.sh  gasnova.db  pyproject.toml  requirements.txt  run_backend.bat
backend/alembic/: env.py
backend/alembic/versions/: 001_add_fuel_type_to_pump_transactions.py  002_add_sd_sync_fields_to_pump_transactions.py  003_add_counter_breakdown_to_shift_closures.py  004_widen_users_pin_column.py  005_add_nozzles_json_to_pump_configuration.py
backend/docs/: PTS2_SDK_INTEGRATION_GUIDE.md
backend/examples/: authorize_pump.py  env_usage.py  get_datetime.py  get_network.py  pump_status.py  quick_test.py  reports.py  tank_measurements.py
backend/print_agent/: agent.py  requirements.txt  run_agent.bat  run_agent.sh
backend/pts2_api/: __init__.py  database.py  db_migration_helpers.py  dependencies.py  live_broadcast.py  live_state.py  main.py  models.py  printer_engine.py  schemas.py  security.py  transaction_store.py  worker.py
backend/pts2_api/routers/: configuration.py  health.py  live.py  print_receipt.py  pumps.py  reports.py  scheduled_prices.py  settings.py  shifts.py  sync.py  tanks.py  users.py  websocket.py
backend/pts2_sdk/: __init__.py  auth.py  client.py  configuration.py  exceptions.py  probes.py  pumps.py  reports.py  retry.py  settings.py  tanks.py  transport.py  websocket.py
backend/pts2_sdk/models/: __init__.py  pumps.py  (+5 more)
backend/tests/: test_client.py  test_reports.py  test_transport.py
(+88 files in other folders)
